Kubernetes-files/vote-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
  namespace: three-tier
  labels:
    app: vote-app
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: vote-app
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - image: 844646036290.dkr.ecr.us-east-2.amazonaws.com/vote-app:19
          name: vote-app-container
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          ports:
            - containerPort: 8080
      restartPolicy: Always
      imagePullPolicy: Always
