Kubernetes-files/vote-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app
  namespace: three-tier
spec:
  selector:
    app: vote-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
